# gtkmm2_msvc14

./: CMakeLists.txt  LICENSE  README.md  build.bat  gtkrc
atkmm/MSVC_Net2015/atkmm/: atkmm.rc  atkmm.vcxproj
atkmm/MSVC_Net2015/gendef/: gendef.vcxproj
cairomm/MSVC_Net2015/cairomm/: cairomm.vcxproj  cairomm.vcxproj.filters
cairomm/MSVC_Net2015/gendef/: gendef.vcxproj
cmake/: atkmm.cmake  cairomm.cmake  gdkmm.cmake  gendef.cmake  giomm.cmake  glibmm.cmake  gtkmm.cmake  pangomm.cmake  sigcpp.cmake
gendef/: gendef.cc
glibmm/MSVC_Net2015/: glibmm.sln
glibmm/MSVC_Net2015/gendef/: gendef.vcxproj  gendef.vcxproj.filters
glibmm/MSVC_Net2015/giomm/: giomm.rc  giomm.vcxproj  giomm.vcxproj.filters
glibmm/MSVC_Net2015/glibmm/: glibmm.rc  glibmm.vcxproj  glibmm.vcxproj.filters
glibmm/gio/giomm/: appinfo.cc  asyncresult.cc  bufferedinputstream.cc  cancellable.cc  datainputstream.cc  dataoutputstream.cc  desktopappinfo.h  drive.cc  error.cc  file.cc  fileenumerator.cc  fileinputstream.cc  fileiostream.cc  fileoutputstream.cc  inetaddress.cc  inetsocketaddress.cc  initable.cc  inputstream.cc  iostream.cc  loadableicon.cc  memoryoutputstream.cc  mount.cc  networkaddress.cc  networkservice.cc  outputstream.cc  resolver.cc  seekable.cc  socket.cc  socketaddress.cc  socketaddressenumerator.cc  socketclient.cc  socketconnectable.cc  socketconnection.cc  socketlistener.cc  socketservice.cc  tcpconnection.cc  themedicon.cc  threadedsocketservice.cc  unixconnection.cc  unixconnection.h  (+6 more)
glibmm/glib/glibmm/: date.cc  keyfile.cc  optioncontext.cc  wrap_init.cc
gtkmm/MSVC_Net2015/: gtkmm.sln
gtkmm/MSVC_Net2015/gdkmm/: gdkmm.rc  gdkmm.vcxproj  gdkmm.vcxproj.filters
gtkmm/MSVC_Net2015/gendef/: gendef.cc  gendef.vcxproj  gendef.vcxproj.filters
gtkmm/MSVC_Net2015/gtkmm/: gtkmm.rc  gtkmm.vcxproj  gtkmm.vcxproj.filters
gtkmm/gdk/gdkmm/: bitmap.cc  colormap.cc  device.cc  display.cc  displaymanager.cc  dragcontext.cc  drawable.cc  gc.cc  image.cc  pixbuf.cc  pixbufloader.cc  pixmap.cc  screen.cc  visual.cc  window.cc  wrap_init.cc
gtkmm/gtk/gtkmm/: aboutdialog.cc  accelgroup.cc  action.cc  actiongroup.cc  activatable.cc  adjustment.cc  assistant.cc  builder.cc  button.cc  calendar.cc  celleditable.cc  celllayout.cc  cellrenderer.cc  cellrendereraccel.cc  cellrenderertext.cc  cellrenderertoggle.cc  checkbutton.cc  checkmenuitem.cc  clipboard.cc  colorbutton.cc  colorselection.cc  combo.cc  combobox.cc  comboboxentry.cc  container.cc  curve.cc  dialog.cc  editable.cc  entry.cc  entrybuffer.cc  entrycompletion.cc  fontbutton.cc  frame.cc  handlebox.cc  iconfactory.cc  icontheme.cc  iconview.cc  image.cc  infobar.cc  inputdialog.cc  (+70 more)
libsigc++/MSVC_Net2015/: libsigc++2.vcxproj
src/: unistd.h
(+5 files in other folders)
